hphp/hack/test/typecheck/shape/key_exists_abstract_shape.php.exp
ERROR: File "key_exists_abstract_shape.php", line 7, characters 9-34:
This `Shapes::keyExists()` check is always false (Typing[4250])
  File "key_exists_abstract_shape.php", line 4, characters 29-60:
  The field `c` is not defined in this shape
