hphp/hack/test/typecheck/shape/key_exists_abstract_shape.php
<?hh

abstract class AC {
  abstract const type TC as shape('a' => int, 'b' => string);

  public function foo(this::TC $s): void {
    if (Shapes::keyExists($s, 'c')) { // 'c' does not exist in TC
      // stuff
    }
  }
}
